[package]
name = "validator-pcap-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "3.0.10", features = ["derive"] }
color-eyre = "0.6.0"
etherparse = "0.10.1"
human_bytes = "0.3.0"
pcap = "0.9.1"
solana-sdk = "1.9.5"
